--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       >。
     </p>
 
-    <button>切换用户</button>
+    <button class="qhyh">切换用户</button>
+    <button class="html1"><a href="">html1</a></button>
   </body>
 </html>
