--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </p>
 
     <button class="qhyh">切换用户</button>
-    <button class="html1"><a href="">html1</a></button>
+    <button class="html1"><a href="pages/html1.html">html1</a></button>
   </body>
 </html>
