--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link href="styles/style.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
@@ -38,5 +39,8 @@
 
     <button class="qhyh">切换用户</button>
     <button class="html1"><a href="pages/html1.html">html1</a></button>
+    <button class="html2"><a href="pages/html2.html">html2</a></button>
+    <button class="html3"><a href="pages/html3.html">html3</a></button>
+    <button class="task1"><a href="pages/task1.html">task1</a></button>
   </body>
 </html>
